<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_stock">
    <fragment
        android:id="@+id/navigation_stock"
        android:name="com.polinema.bukukas_stock.ui.stock.StockFragment"
        android:label="@string/title_stock"
        tools:layout="@layout/stock_fragment" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.polinema.bukukas_stock.ui.akun.AkunFragment"
        android:label="@string/title_account"
        tools:layout="@layout/akun_fragment" />
    <fragment
        android:id="@+id/navigation_transaksi"
        android:name="com.polinema.bukukas_stock.ui.transaksi.TransaksiFragment"
        android:label="@string/title_transaksi"
        tools:layout="@layout/transaksi_fragment" />
</navigation>