<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.polinema.bukukas_stock.ui.stock.StockViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet"
        android:elevation="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/tambah_barang_label"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnCloseSheet"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="#FFFFFF"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_round_close_24" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/item_name_label"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/edtItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/item_name_hint"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/item_amount"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtItemName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/item_minimal_amount"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/btnSubstractAmountItem"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.523"
            app:srcCompat="@drawable/ic_round_remove_24" />

        <ImageButton
            android:id="@+id/btnSubstractMinimalItem"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.523"
            app:srcCompat="@drawable/ic_round_remove_24" />

        <ImageButton
            android:id="@+id/btnAddAmountItem"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/edtAmountItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edtAmountItem"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/ic_round_add_24" />

        <ImageButton
            android:id="@+id/btnAddMinimalItem"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/edtMinimalItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edtMinimalItem"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/ic_round_add_24" />

        <EditText
            android:id="@+id/edtAmountItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="0"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnSubstractAmountItem"
            app:layout_constraintEnd_toStartOf="@+id/btnAddAmountItem"
            app:layout_constraintStart_toEndOf="@+id/btnSubstractAmountItem"
            app:layout_constraintTop_toTopOf="@+id/btnSubstractAmountItem"
            tools:text="99999" />

        <EditText
            android:id="@+id/edtMinimalItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:ems="10"
            android:inputType="number"
            android:text="0"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnSubstractMinimalItem"
            app:layout_constraintEnd_toStartOf="@+id/btnAddMinimalItem"
            app:layout_constraintStart_toEndOf="@+id/btnSubstractMinimalItem"
            app:layout_constraintTop_toTopOf="@+id/btnSubstractMinimalItem"
            tools:text="99999" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66" />

        <Button
            android:id="@+id/btnAddItemtoStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/tambah_stock_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>