<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.polinema.bukukas_stock.dao.Item" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/item_amount"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:text="@string/item_minimal_amount"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEditItemAmount" />

            <EditText
                android:id="@+id/edtEditItemAmount"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/colorButtonNormal"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:padding="2dp"
                android:text="@{String.valueOf(item.item_stock)}"
                android:textColor="?attr/editTextColor"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:text="9999" />

            <EditText
                android:id="@+id/edtEditItemMinimal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/colorButtonNormal"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:padding="2dp"
                android:text="@{String.valueOf(item.item_minimal)}"
                android:textColor="?attr/editTextColor"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                tools:text="9999" />

            <ImageButton
                android:id="@+id/btnEditAddAmount"
                android:layout_width="35dp"
                android:layout_height="0dp"
                android:background="@color/purple_200"
                android:tint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/edtEditItemAmount"
                app:layout_constraintStart_toEndOf="@+id/edtEditItemAmount"
                app:layout_constraintTop_toTopOf="@+id/edtEditItemAmount"
                app:srcCompat="@drawable/ic_round_add_24" />

            <ImageButton
                android:id="@+id/btnEditAddMinimal"
                android:layout_width="35dp"
                android:layout_height="0dp"
                android:background="@color/purple_200"
                android:tint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/edtEditItemMinimal"
                app:layout_constraintStart_toEndOf="@+id/edtEditItemMinimal"
                app:layout_constraintTop_toTopOf="@+id/edtEditItemMinimal"
                app:srcCompat="@drawable/ic_round_add_24" />

            <ImageButton
                android:id="@+id/btnSubtractEditAmount"
                android:layout_width="35dp"
                android:layout_height="0dp"
                android:background="@color/purple_200"
                android:tint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/edtEditItemAmount"
                app:layout_constraintEnd_toStartOf="@+id/edtEditItemAmount"
                app:layout_constraintTop_toTopOf="@+id/edtEditItemAmount"
                app:srcCompat="@drawable/ic_round_remove_24" />

            <ImageButton
                android:id="@+id/btnSubtractEditMinimal"
                android:layout_width="35dp"
                android:layout_height="0dp"
                android:background="@color/purple_200"
                android:tint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/edtEditItemMinimal"
                app:layout_constraintEnd_toStartOf="@+id/edtEditItemMinimal"
                app:layout_constraintTop_toTopOf="@+id/edtEditItemMinimal"
                app:srcCompat="@drawable/ic_round_remove_24" />

            <Button
                android:id="@+id/btnSaveEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/save_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEditItemMinimal" />

            <ImageButton
                android:id="@+id/btnCloseEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/white"
                android:padding="1dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_round_close_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>